Revert to 27ad872: restore proxy layer and Certbot/SSL config
Reverts changes from commits a562eed, 6072e92, and babae65 to restore
the codebase to the state at 27ad872 (Fix Certbot (#27)).

https://claude.ai/code/session_011iNp8i2zAxzfFQ7MvaTRWS